# rubrica

./: build.sh  pyproject.toml
core/: models.py  settings.py  urls.py  views.py
drfauth/: models.py  serializers.py  urls.py  views.py
drfauth/migrations/: 0001_initial.py  0002_alter_customusermodel_userid.py  0003_alter_customusermodel_userid.py
staticfiles/: anexo.docx  informe.docx  reporte.docx
